[package]
name = "stunnel-space"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
nix = "0.26"
sysinfo = "0.29"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.14"
